@@ -302,6 +302,9 @@ Version 2.2.0 - The "We only delayed it to release on our 4th birthday. And then
 		icon points to the same file" issue.
 		* Skin support with relative paths.
 
+	visualage:
+		* Fix for aMuleWeb unicode search/download link error.
+
 	Vollstrecker:
 		* Added possibility to give the path for output right with
 		  -p or -o in cas.
